src/objects/Title__c.object
<CustomObject>
    <description>This Object is the master object which has the name, language(lookup), Director, producer,</description>
    <fields>
        <fullName>Cast_and_crew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cast and crew</label>
        <referenceTo>Cast_and_crew__c</referenceTo>
        <relationshipLabel>Titles</relationshipLabel>
        <relationshipName>Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Takes the language as Input</description>
        <inlineHelpText>Enter the language</inlineHelpText>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Titles</relationshipLabel>
        <relationshipName>Titles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Assets__c</fullName>
        <description>this is a  rollup summary field for asset object</description>
        <label>Number of Assets</label>
        <summaryForeignKey>Asset_Concept__c.Title__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <description>Takes the url of the photo</description>
        <label>Photo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Production_end_Date__c</fullName>
        <label>Production end Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReleaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This makes the lookup relationship with release object(ReleaseId)</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Titles (Release)</relationshipLabel>
        <relationshipName>Titles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Titles</relationshipLabel>
        <relationshipName>Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Thumbnail__c</fullName>
        <formula>IMAGE(Photo__c, &quot;Photo Unavailable&quot; ,50, 50)</formula>
        <label>MovieImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Image__c</fullName>
        <formula>IMAGE(Photo__c, &quot;Photo Unavailable&quot; ,300, 300)</formula>
        <label>Title Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>genre__c</fullName>
        <label>genre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Animation</fullName>
                </value>
                <value>
                    <fullName>Thriller</fullName>
                </value>
                <value>
                    <fullName>Horror</fullName>
                </value>
                <value>
                    <fullName>Romantic-comedy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checks whether the movie is completed or not</description>
        <label>isClosed</label>
        <type>Checkbox</type>
    </fields>
    <label>Title</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Titles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>production_rule</fullName>
        <active>true</active>
        <description>to check that production is before release</description>
        <errorConditionFormula>AND( isClosed__c , ReleaseId__r.Release_Date__c - Production_end_Date__c  &lt; 0 )</errorConditionFormula>
        <errorDisplayField>ReleaseId__c</errorDisplayField>
        <errorMessage>invalid date</errorMessage>
    </validationRules>
</CustomObject>